<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/navigation_history_title" />

    <item
        android:id="@+id/nav_table"
        android:icon="@drawable/ic_baseline_table_view_24"
        android:title="@string/navigation_table_title" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_monitor_24"
        android:title="@string/navigation_home_title" />

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/navigation_messages_title" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/navigation_settings_title" />

</menu>