<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/table_page_title_label"
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/table_title_label"
        android:textColor="@color/general_gray"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:id="@+id/table_index_top"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">


        <View
            android:id="@+id/table_index_spacer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/bg_r24_nw" />

        <TextView
            android:id="@+id/table_index_dispatch_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_dispatch_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_reserve_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_reserve_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_emergency_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_emergency_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_price_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@drawable/bg_r24_ne"
            android:gravity="center"
            android:text="@string/table_index_price_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/table_index_bottom"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/table_index_time_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_time_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_upward_dispatch_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_upward_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_downward_dispatch_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_downward_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_upward_reserve_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_upward_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_downward_reserve_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_downward_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_emergency_range_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_emergency_range_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_price_high_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_upward_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/table_index_price_low_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/general_white_highlight"
            android:gravity="center"
            android:text="@string/table_index_downward_label"
            android:textColor="@color/general_black"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_row_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>