<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/dashboard_chart_container"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginTop="16dp"
        android:background="@color/general_white_highlight"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/dashboard_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <TextView
        android:id="@+id/dashboard_now_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dashboard_now_label"
        app:layout_constraintBottom_toBottomOf="@+id/dashboard_chart_container"
        app:layout_constraintEnd_toEndOf="@+id/dashboard_chart_container" />

    <LinearLayout
        android:id="@+id/dashboard_details_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_r10_nesw"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_switch_mute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_chart_container">

        <TextView
            android:id="@+id/dashboard_recent_price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_most_recent_price_label"
            android:textColor="@color/general_black" />

        <TextView
            android:id="@+id/dashboard_recent_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_format_no_price"
            android:textColor="@color/general_black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/dashboard_details_backlog_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dashboard_price_backlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/general_gray_highlight" />

            <TextView
                android:id="@+id/dashboard_price_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/general_red" />

        </LinearLayout>

        <TextView
            android:id="@+id/dashboard_emergency_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/general_gray_highlight" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dashboard_switch_mute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_r10_nesw"
        android:padding="16dp"
        android:text="@string/settings_mute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>